packages/parser/test/parser/E0129.txt
a := (a: int, b: str) void {}
===== err =====
anonymous:1:22: ParseError: E0129 - Expected arrow after closure expression parameters
1 | a := (a: int, b: str) void {}
  |                      ^
